--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -372,7 +372,7 @@ ul {
 * Animations
 *********************/
 
-.fadeZoom.ng-enter {
+/*.fadeZoom.ng-enter {
   -webkit-animation-duration: 0.6s, 0.2s;
   -moz-animation-duration: 0.2s, 0.2s;
   -ms-animation-duration: 0.2s, 0.2s;
@@ -392,9 +392,9 @@ ul {
   -moz-animation-name: fadeIn, zoomIn;
   -ms-animation-name: fadeIn, zoomIn;
   animation-name: fadeIn, zoomIn;
-}
+}*/
 
-.fadeZoomFadeDown.ng-leave {
+/*.fadeZoomFadeDown.ng-leave {
   -webkit-animation: fadeOutDown 0.2s;
   -moz-animation: fadeOutDown 0.2s;
   -ms-animation: fadeOutDown 0.2s;
@@ -428,3 +428,637 @@ ul {
     opacity: 1;
   }
 }*/
+
+
+
+body  {
+  background-color: #e8e8e8;
+  /*background-image: url('../images/bck.jpg');*/
+}
+
+/*#watermark
+{
+position:fixed;
+bottom:5px;
+right:5px;
+opacity:0.5;
+z-index:99;
+color:white;
+}*/
+
+/*it is used fir image cropping*/
+.cropArea {
+  background: #E4E4E4;
+  overflow: hidden;
+  width:500px;
+  height:350px;
+}
+
+/*nav-bar collapse hiding style*/
+.hide {
+    display: inline-block;
+}
+
+/*keepClass is used for brand-name*/
+#keepClass  {
+    font-family: 'Product Sans',Arial,sans-serif; /*iNTEGRATE THE FONT INTO YOUR CSS*/
+     font-size: 24px;
+     font-weight: 400;
+     margin-left: -25px;
+     margin-top: -7px;
+     position: relative;
+     display: inline-block;
+     padding: 8px;
+     vertical-align: middle;
+     vertical-align: middle;
+     color: teal;
+     outline: none;
+     text-rendering: optimizeLegibility;  /*font-weight: 200px;*/   /*text-align: center;*/   /*text-shadow: 0 1px 1px #fff;*/  /*color: #d54d7b;*/
+}
+
+#keepClass:hover  {
+  color:white;
+}
+
+/*popupTitle,popupContent is used for title and content of popup box*/
+#popupTitle:empty:before,#popupContent:empty:before {
+    display: block;
+    content: attr(placeholder);
+}
+
+/*dummyTitle,title1 and content are used for dummy title,title and content of msg box. Its empty placeholder when user write something*/
+#dummyTitle:empty:before,#title1:empty:before,#content:empty:before {
+    display: block;
+    content: attr(placeholder);
+}
+
+::-webkit-div-placeholder {
+    color: red;
+}
+
+/*css for cards*/
+#msgDivId {
+    width: 70%,
+    background-color:rgba(204, 204, 204, .28);
+}
+
+/*it is used for dummy title,which shows in dashboard*/
+#dummyTitle {
+    background-color: white;
+    width: 120%;
+    margin-top: 63px;
+    line-height: 19px;
+    height: 44px;
+    padding: 12px 15px 15px 15px;
+    box-sizing: border-box;
+    /*box-shadow: 0 0px 0px rgba(0,0,0,0), 0 -5px 21px rgba(0,0,0,0.22), 0 1px 5px 0 rgba(0,0,0,.12);;*/
+    box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+    overflow: hidden;
+    position: relative;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -webkit-transition-duration: .218s;
+    transition-duration: .218s;
+    -webkit-transition-property: background,opacity,-webkit-box-shadow,-webkit-transform;
+    transition-property: background,opacity,box-shadow,transform;
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+}
+
+
+#notes  {
+    margin-top: 20px ;
+    /*margin-left:40px;*/
+}
+
+#noteslist  {
+  margin-top: 3px;
+}
+
+#noteMsg  {
+    min-height: 100%;
+    margin: 8px;
+    word-wrap: break-word;
+    border: none;
+    background-color: white;
+    box-shadow: 5px 5px 5px #888;
+}
+
+.note-inner {
+    position: relative;
+    min-height: 100%;
+    word-wrap: break-word;
+}
+
+.insidecontent  {
+    min-height: 100%;
+    margin: 8px;
+    word-wrap: break-word;
+    border: 1px solid black;
+    border: none;
+    /*background-color: rgba(204, 204, 204, 0.28);*/
+}
+
+.title  {
+    font-family: 'Roboto Slab','Times New Roman',serif;
+    font-size: 18px;
+    font-weight: bold;
+    box-sizing: border-box;
+    border: none;
+}
+
+#title1 {
+    font-family: 'Roboto',arial,sans-serif;
+    font-size: 17px;
+    line-height: 19px;
+    min-height: 46px;
+    padding: 12px 15px 15px 15px;
+    border: none;
+    outline: none;
+}
+
+#content  {
+  font-family: 'Roboto Slab','Times New Roman',serif;   /*font-family: 'Roboto',arial,sans-serif;*/
+    font-size: 14px;
+    line-height: 19px; /*min-height: 46px;*/
+    padding: 12px 15px 15px 15px;   /*background-color: rgba(204, 204, 204, 0.28);*/  /*height: auto;*/
+    border: none;
+    outline: none;
+}
+
+#newtemp1 {
+    border: 1px solid;
+}
+
+/*css for glyphicon glyphicon-user*/
+.glyphicon glyphicon-user {
+    position: fixed;
+    z-index: 1000;
+    right: 0;
+    overflow-y: auto;
+    width: 320px;
+    height: 100%;
+    margin-right: -320px;
+
+    -webkit-transition: all .4s ease-in-out 0s;
+       -moz-transition: all .4s ease-in-out 0s;
+        -ms-transition: all .4s ease-in-out 0s;
+         -o-transition: all .4s ease-in-out 0s;
+            transition: all .4s ease-in-out 0s;
+
+    color: white;
+    background: #222;
+}
+
+/*it is used fir sidebar wrapper*/
+#sidebar-wrapper{
+    width: 200px;   /*background-color: rgb(51,51,51);*/
+    background-color: rgba(6,6,6,1);
+}
+/*sidebar toggled css*/
+#wrapper.toggled #sidebar-wrapper{
+    width: 0;
+}
+
+#page-content-wrapper{
+    padding: 20px;
+}
+
+#wrapper.toggled #page-content-wrapper{
+    position: relative;
+    margin-right: 0;
+}
+
+/*css for title and content box */
+#userMsgBox{
+    margin-top: 70px;
+    padding: 24px;
+    background-color: white; /*border :1px solid black;*/  /*box-shadow: 5px 5px 7px rgba(33,33,33,.7);*/
+    box-shadow: 0 5px 7px rgba(33,33,33,.7), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+}
+
+
+#listview{
+    display: none;
+    align-content: center;
+}
+
+
+.todotittle{
+    position: absolute;
+    z-index: 0;
+    padding: 14px;
+    pointer-events: none;
+    color: rgba(0,0,0,.54);
+}
+
+.todocontent{
+    position: absolute;
+    z-index: 0;
+    padding: 14px;
+    pointer-events: none;
+    color: rgba(0,0,0,.54);
+}
+
+.gridviewnew{
+  margin-top:30px;
+  /*width:260px;*/
+}
+.gridcss{
+  width :260px;
+  display:block;
+  transition-property: opacity,transform;
+}
+
+#mainMsgBox{
+    width: 84%;
+    margin-top: 30px;
+}
+/*hover effect for button*/
+#delete:hover,#makeCopy:hover{
+    color: teal;
+}
+
+/*hover effect for button*/
+#saveReminder:hover{
+  color:red;
+}
+
+/*hover effect for button*/
+#done:hover{
+    color: red;
+    background-color: rgba(232, 169, 165, 0.09);
+}
+
+/*css for done button*/
+#done{
+    float: right;
+    color: teal;
+    border: none;
+    outline: none;
+    background-color: white;
+}
+
+.dropdown-toggle {
+    background-color: rgba(238, 238, 238, 0);
+}
+
+a {
+    color: #080808;
+    text-decoration: none;
+}
+
+.dropdown open
+{
+    background-color: #fb0;
+}
+
+#inputid
+{
+  background: rgba(0,0,0,0.04);
+  border: 1px solid rgba(0,0,0,0);
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 650px;
+  position: relative;
+  -webkit-transition: background 100ms ease-in,width 100ms ease-out;
+  transition: background 100ms ease-in,width 100ms ease-out;
+    /*font-size: 12px;
+    color: #eee;
+    border-color: transparent;
+    border-radius: 0;
+    background-color:rgba(0, 0, 0, 0)
+    box-shadow: 0 0;*/
+}
+.btn-block
+{
+    position: relative;
+    color: #fff;
+    border-color: rgba(182, 189, 182, 0);
+    /*border-collapse: separate;*/
+    border-radius: 6px;
+    background-color: #403232;
+}
+
+.glyphicon
+{
+    font-family: 'Glyphicons Halflings';
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1;
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    color: #767676;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+#ab{
+  position :relative;
+  display: block;
+}
+
+/*grid view card style*/
+.preid
+{
+  width:260px;
+  background-color: rgba(232, 232, 232, 0.19);
+  background-color: white;
+    /*position: relative;*/
+    word-wrap:break-word;
+    display: inline-block;
+    overflow: hidden;
+    /*margin-left: 12%;*/
+    box-sizing: border-box;
+    width: 100%;
+    margin: 4px 4px 4px -4px;
+    padding: 0;
+    -webkit-transitioncursor-timing-function: ease-in;
+            transition-timing-function: ease-in;
+    -webkit-transition-duration: .218s;
+            transition-duration: .218s;
+    -webkit-transition-property: background,opacity,-webkit-box-shadow,-webkit-transform;
+            transition-property: background,opacity,box-shadow,transform;
+
+    -webkit-border-radius: 2px;
+            border-radius: 2px;
+            box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+    /*box-shadow: 0 0px 0px rgba(0,0,0,0), 0 -5px 21px rgba(0,0,0,0.22), 0 1px 5px 0 rgba(0,0,0,.12);*/
+}
+
+/*grid and listview card style after hover*/
+.cardhover::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  /*box-shadow:  0 2px 17px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2);*/
+  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+
+  content: '';
+  opacity: 0;
+  z-index: -1;
+}
+.cardhover:hover, .preid:focus {
+  /*transform: scale3d(1.006, 1.006, 1);*/
+  transform: scale3d(1.020, 1.020, 1);
+  position:relative;
+  /*-o-transform:rotate(4deg);
+  -webkit-transform:rotate(4deg);
+  -moz-transform:rotate(4deg);*/
+  /*top:2px;*/
+
+}
+.cardhover:hover::after, .preid:focus::after {
+  opacity: 1;
+  position:relative;
+  top:-5px;
+  background:#ccf;
+}
+
+/*css for delete reminder*/
+#removecircle:hover{
+  color :black;
+}
+
+/*list view card style*/
+.preid1{
+  width:100%;
+   background-color: white;
+   box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+    display: inline-block;
+    overflow: hidden;
+    word-wrap:break-word;
+    box-sizing: border-box;
+    margin-top: 8px;
+    margin-bottom: 6px;
+    padding: 0;
+
+    -webkit-transition-timing-function: ease-in;
+            transition-timing-function: ease-in;
+    -webkit-transition-duration: .218s;
+            transition-duration: .218s;
+    -webkit-transition-property: background,opacity,-webkit-box-shadow,-webkit-transform;
+            transition-property: background,opacity,box-shadow,transform;
+
+    -webkit-border-radius: 2px;
+            border-radius: 2px;
+    /*margin-left: 12%;*/
+    /*width: 108%;*/
+    /*margin: 4px;*/
+    /*box-shadow: 0 4px 20px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);*/
+    /*position: relative;*/
+    /*box-shadow: 0 4px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22), 0 1px 5px 0 rgba(0,0,0,.12);*/
+}
+
+.modal-content { /*this css is for popup-box*/
+  margin-top: 30%;
+}
+
+#reminder,#more{
+  background-color: rgba(238, 238, 238, 0);
+  margin-left:1%;
+}
+#reminder:hover,#more:hover{
+  color:teal;
+}
+#reminder1:hover{
+  color:red;
+}
+
+#remindercss{
+  padding: 2px 4px 3px 4px; /*margin-left: 4px;*/  /*font-size: 12px;*/
+  color : rgba(128, 128, 128, 0.51);
+  border-top: 0.5px dashed;
+  height :26px;
+}
+
+#footer{
+    padding: 2px 4px 3px 4px;
+    height:40px;
+}
+
+.titlecss{
+font-size:16px;font-family: times, Times New Roman, times-roman, georgia, serif;
+letter-spacing: 1px;
+font-weight: bold;
+color:teal;
+}
+
+#noteinner{
+  font-size:16px;
+  padding: 3px 14px 2px 10px;
+  font-family: Gill Sans, Verdana;
+  letter-spacing: 0.5px;
+}
+
+/*css for search div*/
+#query{
+  width:400px;
+  height:40px;
+  outline: none;
+  background-color: #ddd;
+  border:none;
+  margin-left: 63px;
+  /*box-shadow: -8px 4px 12px grey;*/
+}
+/*css for search,focus on mouse click*/
+#inputid :focus{
+  background-color: white;  /*box-shadow: -9px 2px 12px grey;*/
+}
+/*hover effect of logOutId button*/
+#logOutId:hover{
+  color:white;
+}
+
+/*glyphicon hover style*/
+#tglid:hover{
+    cursor: pointer;
+    color: white;
+    transform: scale3d(1.2,1.2,1);
+}
+#gridgly:hover,#listgly:hover{
+    cursor: pointer;
+    color:white;
+    transform: scale3d(1.5, 1.5, 1);
+
+}
+
+#refreshicon:hover{
+    cursor: pointer;
+    fill: white; /*fill used for svg color change*/
+    transform: scale3d(1.5, 1.5, 1);
+
+}
+
+/*it is used for profile image of drop-down box*/
+.circular--square {
+      background-size: 96px 96px;
+      overflow: hidden;
+      font-size:10px;
+      text-align: center;
+      position: relative;
+      width: 111px;
+      height: 111px;
+      /*overflow: hidden;*/
+      border-radius: 50%;
+      margin-left: 0px;
+      margin-right: 20px;
+      top: 0px;
+      border:0.5px solid black;
+      background-color:teal;
+      color:white;
+      padding: 0px;
+      font-size: 55px;
+}
+
+.circular--square:hover{
+      cursor: pointer;
+      transform: scale3d(1.060, 1.060, 1);
+}
+
+/*it is used for profile image of navigation-bat*/
+.circular--square1 {
+  text-align: center;
+  overflow: hidden;
+  background-color: teal;
+  border-radius: 50%;
+  color:white;
+  padding:0px;
+  font-size: 13px;
+   position: relative;
+   width: 44px;
+   height: 38px;
+   overflow: hidden;
+   border-radius: 50%;
+   border:0.5px solid #333;
+   /*border:0px;*/
+   /*background-color:#7d0000;*/
+     /*cursor: default;*/
+     /*width: 44px;
+     height: 30px;*/
+}
+
+.circular--square1:hover{
+      border: 3px solid teal;
+      cursor: pointer;
+      transform: scale3d(1.2, 1.2, 2);
+      /*transform: rotate(180deg);*/
+}
+
+#logoutdropdown{
+  width:335px;
+  padding-left: 25px;
+  padding-top: 9px;
+  height: 200px;
+  margin-left:-320;
+  margin-right:20%;
+  background: #E8E8E8;
+  box-shadow: 0px 5px 7px rgba(33,33,33,.7);
+}
+
+#pinned,#others,#reminderdiv{
+/*margin:2px 0px 12px 12px;*/
+  margin:22px 16px ;
+  color: rgba(0,0,0,.54);
+  font-family: 'Roboto',arial,sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  visibility: visible;
+}
+
+#imgpath:hover {
+  background-border:1px solid blue;
+}
+
+
+@media (min-width: 320px)
+{
+    #wrapper
+    {
+        padding-left: 250px;
+    }
+
+    #wrapper.toggled
+    {
+        padding-left: 0;
+    }
+    .navbar-fixed-top .navbar-inner,
+    .navbar-fixed-bottom .navbar-inner
+    {
+        padding: 3px;
+    }
+}
+
+
+@media (min-width: 768px)
+{
+    #wrapper
+    {
+            padding-left: 170px;
+    }
+
+    #wrapper.toggled
+    {
+        padding-left: 0;
+    }
+}
+
+@media (max-width: 700px)
+{
+    #wrapper
+    {
+        padding-left: 0;
+    }
+
+    #wrapper.toggled
+    {
+        padding-left: 0;
+    }
+
+    #search  {
+        display: none;
+    }
+}
