--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -317,15 +317,7 @@ a {
     background-color:rgba(0, 0, 0, 0)
     box-shadow: 0 0;*/
 }
-.btn-block
-{
-    position: relative;
-    color: #fff;
-    border-color: rgba(182, 189, 182, 0);
-    /*border-collapse: separate;*/
-    border-radius: 6px;
-    background-color: #403232;
-}
+
 
 .glyphicon
 {
@@ -471,6 +463,7 @@ a {
   font-weight: bold;
   color:teal;
   padding: 2px 14px 2px 10px;
+  min-height:20px;
   /*font-size:17px;
   font-family: times, Times New Roman, times-roman, georgia, serif;*/
   /*letter-spacing: 1px;
@@ -488,6 +481,7 @@ a {
   padding: 3px 14px 9px 14px;
   font-family: Gill Sans, Verdana;
   letter-spacing: 0.5px;
+  min-height: 45px;
 }
 
 /*css for search div*/
@@ -584,7 +578,36 @@ a {
       /*transform: rotate(180deg);*/
 }
 
-.circular--squareCollaborator{
+
+#collaboratorId {
+    border-bottom: none;
+    font-size: 20px;
+    font-weight: 700;
+    height: 25px;
+    padding: 0 0 10px 0;
+    color: rgba(0,0,0,.87);
+    direction: ltr;
+    font-family: 'Roboto',arial,sans-serif;
+    outline: none;
+    border-top:none;
+    margin-bottom: 10px;
+}
+#collabImage {
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    padding-left: -1px;
+    font-size: 33px;
+    display: inline-block;
+    margin-left: 20px;
+    margin-top:15px;
+}
+
+
+
+
+
+/*.circular--squareCollaborator{
   text-align: center;
   overflow: hidden;
   background-color: black;
@@ -598,11 +621,11 @@ a {
    overflow: hidden;
    border-radius: 50%;
    border:0.5px solid #fff;
-}
-.circular--squareCollaborator:hover {
+}*/
+/*.circular--squareCollaborator:hover {
     border: 1px solid black;
 
-}
+}*/
 
 
 #logoutdropdown{
@@ -649,6 +672,28 @@ a {
     }
 }
 
+#colbFindcss {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    font-size: 13px;
+    font-family: 'Roboto',arial,sans-serif;
+    height: 25px;
+    outline: none;
+    /*padding: 0;*/
+    display: flex;
+    padding: 5px;
+    max-length :320px;
+    width:99%;
+    flex: 1 0 auto;
+    margin: 18px 13px;
+    /*height: 5rem;*/
+    /*line-height: 5rem;*/
+    width: 100%;
+    /*font-size: 1.5rem;*/
+}
 
 @media (min-width: 768px)
 {
