--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -695,6 +695,37 @@ a {
     /*font-size: 1.5rem;*/
 }
 
+
+/*.activityloglist{
+  width:100%;
+   background-color: white;
+   box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+    display: inline-block;
+    overflow: hidden;
+    word-wrap:break-word;
+    box-sizing: border-box;
+    margin-top: 8px;
+    margin-bottom: 6px;
+    padding: 0;
+    height: 45px;
+    padding : 5px 10px;
+}*/
+
+.activityloglist {
+    margin-top: 20px;
+    background-color: #fff;
+     /*box-shadow: 5px 5px 7px rgba(33,33,33,.7);*/
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 2px 2px 0 rgba(0, 0, 0, 0.12)!important;
+}
+.loggercontent {
+    font-family: 'Roboto Condensed', arial, sans-serif;
+    font-size: 17px;
+    min-height: 39px;
+    padding: 5px 10px 5px 25px;
+    font-weight: bold;
+    word-wrap: break-word;
+}
+
 @media (min-width: 768px)
 {
     #wrapper
