--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -718,12 +718,14 @@ a {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 2px 2px 0 rgba(0, 0, 0, 0.12)!important;
 }
 .loggercontent {
-    font-family: 'Roboto Condensed', arial, sans-serif;
+    /*font-family: 'Roboto Condensed', arial, sans-serif;*/
+    font-family: times, Times New Roman, times-roman, georgia, serif;
     font-size: 17px;
     min-height: 39px;
     padding: 5px 10px 5px 25px;
-    font-weight: bold;
+    /*font-weight: bold;*/
     word-wrap: break-word;
+    min-height: 20px;
 }
 
 @media (min-width: 768px)
@@ -761,344 +763,4 @@ a {
     float: none;
     margin-left: auto;
     margin-right: auto;
-}*/
-
-
-
-/*
-.gb_ke button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    padding: 0 4px;
-    line-height: 0;
-}
-.gb_De {
-    float: left;
-}*/
-
-
-
-
-
-
-/*#gridgly,#listgly{
-  display:none;
-}*/
-/*.input-group .icon-addon .form-control {
-    border-radius: 0;
-}
-
-.icon-addon {
-    position: relative;
-    color: #555;
-    display: block;
-}
-
-.icon-addon:after,
-.icon-addon:before {
-    display: table;
-    content: " ";
-}
-
-.icon-addon:after {
-    top: 1px
-}
-
-.icon-addon.addon-lg .form-control {
-    line-height: 1.33;
-    height: 46px;
-    font-size: 18px;
-    padding: 10px 16px 10px 40px;
-}
-
-.icon-addon.addon-sm .form-control {
-    height: 30px;
-    padding: 5px 10px 5px 28px;
-    font-size: 12px;
-    line-height: 1.5;
-}
-
-.icon-addon.addon-lg .fa,
-.icon-addon.addon-lg .glyphicon {
-    font-size: 18px;
-    margin-left: 0;
-    left: 11px;
-    top: 4px;
-}
-
-.icon-addon.addon-md .form-control,
-.icon-addon .form-control {
-    padding-left: 30px;
-    float: left;
-    font-weight: normal;
-}
-
-.icon-addon.addon-sm .fa,
-.icon-addon.addon-sm .glyphicon {
-    margin-left: 0;
-    font-size: 12px;
-    left: 5px;
-    top: -1px
-}
-
-.icon-addon .form-control:focus + .glyphicon,
-.icon-addon:hover .glyphicon,
-.icon-addon .form-control:focus + .fa,
-.icon-addon:hover .fa {
-    color: #2580db;
-}*/
-
-/*.listcss{
-    width: 600px;
-    display:block;
-    transition-property: opacity,transform;
-}*/
-
-/*#remindercss:hover{
-  background-color: black;
-}*/
-/*-o-transform:rotate(-3deg);
--webkit-transform:rotate(-3deg);
--moz-transform:rotate(-3deg);*/
-/*#innotegrid{
-  display:block;
-  transition-property: opacity,transform;
-}*/
-/*#innote{
-  width: 260px;
-}*/
-/*#innotelist{
-  display:block;
-  transition-property:
-  opacity,transform;
-}*/
-/*#caret:hover{
-  color:white;
-}*/
-/*.circular--square :hover {
-    -o-transform:rotate(360deg);
-    -webkit-transform:rotate(360deg);
-    -moz-transform:rotate(360deg);
-}*/
-
-/*.row {
-
-    margin-top: 0%;
-}*/
-/*.gb_Cd.gb_Nd .gb_zd .gb_ke {
-    margin-left: 0;
-    margin-right: 0;
-}*/
-/*search box*/
-/*.gb_ke {
-    background: rgba(0,0,0,0.04);
-    border: 1px solid rgba(0,0,0,0);
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 650px;
-    position: relative;
-    -webkit-transition: background 100ms ease-in,width 100ms ease-out;
-    transition: background 100ms ease-in,width 100ms ease-out;
-}
-
-.gb_qc.gb_Bd:not(.gb_yd) .gb_zd {
-    padding-right: 16px;
-}
-
-.gb_De {
-    float: left;
-}
-.gb_Oe {
-    display: none;
-    float: left;
-}
-.gb_ke button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    padding: 0 4px;
-    line-height: 0;
-}
-.gb_ke button svg, .gb_ke button img {
-    padding: 7px;
-    margin: 4px;
-}
-.gb_pc svg, .gb_bc svg {
-    color: black;
-    opacity: .54;
-}
-.gb_pc svg {
-    fill: currentColor;
-}
-svg[Attributes Style] {
-    height: 24px;
-    width: 24px;
-}
-
- svg {
-    transform-origin: 50% 50% 0px;
-}
-
-.gb_Te {
-    height: 46px;
-    padding: 0 11px;
-    margin-right: 48px;
-}
-.gb_Be {
-    border: none;
-    font: normal 16px Roboto,sans-serif;
-    -webkit-font-variant-ligatures: none;
-    font-variant-ligatures: none;
-    height: 24px;
-    outline: none;
-    padding: 11px 0 11px 16px;
-    width: 100%;
-    background: transparent;
-}
-.gb_Ed {
-    line-height: 0;
-    -webkit-user-select: none;
-}*/
-
-
-/*#query:hover{
-  background-color: transparent;
-}*/
-/*#listviewgly:hover{
-  color:white;
-}*/
-
-
-
-/*/////////////////////////////////////////////
-/*box-shadow: 1px 1px 1px 1px grey;*/
-
-/*box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22), 0 1px 5px 0 rgba(0,0,0,.12);;*/
-/*box-shadow: 0 0px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);*/
-  /*box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);*/
-
-
-
-
-
-    /*.glyphicon {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-      color: #080808;
-}*/
-/*#dummyTitle
-{
-    width: 108%;
-    margin-left: -29px;
-}*/
-/*.navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
-      padding: 3px;
-    }*/
-
-/*#done{*/
-/*margin-left:-75px;*/
-/*}*/
-/*#usernavbar{
-    display:none;
-  }
-  #refresh{
-    display:none;
-  }
-  #caret{
-    display:none;
-  }*/
-/*#account{
-    display: none;
-  }
-  #logOutId{
-    display: none;
-  }*/
-/*#acbuttons{
-    display: none;
-  }*/
-/*
-.circular--square {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    overflow: hidden;
-    border-radius: 50%;
-}
-/*.note
-{
-    overflow: hidden;
-    box-sizing: border-box;
-    width: 400px;
-    margin: 8px;
-    margin-left: 100px;
-    -webkit-transition-duration: .218s;
-            transition-duration: .218s;
-
-    word-wrap: break-word;
-    -webkit-border-radius: 2px;
-            border-radius: 2px;
-    background-color: white;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-}*/
-/*.smallNotes
-{
-    border: 1px solid black;
-    box-shadow: 2px 2px 2px #888;
-}*/
-/*#dummyTitle{
-    line-height: 19px;
-    width: 100%;
-    height: 44px;
-    margin-top: 63px;
-    padding: 12px 15px 15px 15px;
-    transition: box-shadow 200ms cubic-bezier(.4, .0, .2, 1);
-    vertical-align: top;
-    border-radius: 2px;
-    background-color: rgba(255,255,255,.15);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.16), 0 0 0 1px rgba(0,0,0,.08);
-    overflow-x: visible;
-overflow-y: visible;
-}*/
-/*ul li a{
-  text-decoration:none;
-  color:#000;
-  background:#ffc;
-  display:block;
-  height:10em;
-  width:10em;
-  padding:1em;
-  -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
-  -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-  -moz-transition:-moz-transform .15s linear;
-  -o-transition:-o-transform .15s linear;
-  -webkit-transition:-webkit-transform .15s linear;
-}
-ul li:nth-child(even) a{
-  -o-transform:rotate(4deg);
-  -webkit-transform:rotate(4deg);
-  -moz-transform:rotate(4deg);
-  position:relative;
-  top:5px;
-  background:#cfc;
-}
-ul li:nth-child(3n) a{
-  -o-transform:rotate(-3deg);
-  -webkit-transform:rotate(-3deg);
-  -moz-transform:rotate(-3deg);
-  position:relative;
-  top:-5px;
-  background:#ccf;
 }*/
