--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -7,12 +7,12 @@ body
 
 /*#watermark
 {
-position:fixed;
-bottom:5px;
-right:5px;
-opacity:0.5;
-z-index:99;
-color:white;
+  position:fixed;
+  bottom:5px;
+  right:5px;
+  opacity:0.5;
+  z-index:99;
+  color:white;
 }*/
 
 /*it is used fir image cropping*/
@@ -65,7 +65,6 @@ color:white;
 #popupContent:empty:before
 {
     display: block;
-
     content: attr(placeholder);
 }
 
@@ -75,7 +74,6 @@ color:white;
 #content:empty:before
 {
     display: block;
-
     content: attr(placeholder);
 }
 
@@ -942,7 +940,15 @@ a
         display: none;
     }
 }
+@media(max-width:560px){
 
+  .gridcss{
+    width :420px;
+  }
+  #dummyTitle{
+    width:163%;
+  }
+}
 /*.center-block {
     float: none;
     margin-left: auto;
